configure(allprojects) { project ->
    apply plugin: 'java'

    group = 'com.followinsider'

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    repositories {
        mavenCentral()
    }
}